hphp/test/slow/keyset/bad-init.php.expectf

Fatal error: syntax error, unexpected T_DOUBLE_ARROW, expecting ']' in %s/bad-init.php on line 4
